# prek-autoupdate

./: .gitignore  AGENTS.md  LICENSE  README.md  data.json  prek.toml  pyproject.toml
.github/workflows/: ci.yml  post_coverage_to_pr.yml  prek_autoupdate.yml  prek_autoupdate_self.yml  pytest_coverage.yml  release.yml
docs/superpowers/plans/: 2026-07-05-reusable-prek-autoupdate.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1826b8f3aa6108ca_cleanup_prek_update_branches_py.html
src/prek_autoupdate/: __init__.py  cleanup_prek_update_branches.py
tests/: __init__.py  test_cleanup_prek_update_branches.py  test_readme.py  test_release_workflow.py  test_reusable_workflow.py
